--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <div class="gameTitle">
     <p>Snake Game</p>
+    <p id="score_card"> Score : <span id="score_value"></span>
   </div>
 
   <!-- GAME ARENA -->
