--- a/index.html
+++ b/index.html
@@ -23,8 +23,12 @@
   <!-- GAME TITLE -->
 
   <div class="gameTitle">
-    <p id="gameName">Snake Game</p>
-    <p id="score_card"> Score : <span id="score_value"></span></p>
+    <p id="gameName">Snake Game (press arrow keys to start!)</p>
+    <div class="score_card">
+    <p class="score" id="current_score"> Score : <span id="score_value"></span></p>
+    <p class="score" id="last_score"> Last : <span id="last_score_value"></span></p>
+    <p class="score" id="best_score"> Best : <span id="best_score_value"></span></p>
+  </div>
   </div>
 
   <!-- GAME ARENA -->
