--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
     <div class="buttons" id="right" onclick="right()">R</div>
   </div>
 
+  <div class="under_title">
+    <p id="underGameName">Snake Game (press arrow keys to start!)</p>
+  </div>
+
 </div>
 
   <script src="script.js"></script>
