--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
 
 </head>
 <body>
+ <!-- AUDIO -->
+  
+  <audio>
+    <source src="audio/snake_hiss.mp3" type="audio/snake_hiss.mp3">
+  </audio>
 
   <!-- CUSTOM SNAKE CURSOR -->
 
